[workspace]
members = [
    "crates/biliup",
    "crates/biliup-cli",
    "crates/stream-gears",
]
resolver = "3"

[workspace.package]
version = "1.1.21"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
bytes = "1.10.1"
# FIXME: 等 rsa 0.10.0 发布后再更新
rand = "0.8"
serde_urlencoded = "0.7"

tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "signal"] }
futures = "0.3.31"
async-trait = "0.1.87"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time"] }
tracing-appender = "0.2"

thiserror = "2"
error-stack = "0.6.0"

time = { version = "0.3", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

bon = "3.7.2"
regex = "1.11.1"
reqwest = { version = "0.12", default-features = false }
url = "2.5"


[profile.release]
lto = true
codegen-units = 1
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.minimal]
inherits = "release"
opt-level = 's'
panic = 'abort'
