[metadata]
name = biliup
version = 0.0.1

[options]
packages = find:
python_requires = >= 3.7
install_requires =
  selenium >= 3.8.1
  psutil >= 5.4.6
  youtube_dl >= 2018.11.18
  Pillow >= 5.2.0
  aiohttp[speedups]
  Requests >= 2.20.0
  PyYAML >= 4.2b1
  streamlink >= 0.14.2
  ykdl @ git+https://github.com/zhangn1985/ykdl.git
  rsa >= 4.6

[options.package_data]
biliup = *.ini

[options.packages.find]
include = biliup*

[options.entry_points]
console_scripts =
    biliup = biliup:_main