[package]
name = "biliup-cli"
version = "0.2.4"
edition = "2024"
description = "Upload video to bilibili."
license = "MIT OR Apache-2.0"

[[bin]]
name = "biliup"
path = "src/main.rs"

[dependencies]
biliup = { path = "../biliup", features = ["cli"] }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }  # 添加特性（特性是累加的）  }
thiserror = { workspace = true }

bytes = { workspace = true }
futures = { workspace = true }
clap = { version = "4", features = ["derive"] }
time = { workspace = true }
anyhow = { workspace = true }
glob = "0.3.2"
qrcode = "0.14"
indicatif =  "0.17.11"
image = "0.25"
dialoguer = "0.11.0"
chrono = { workspace = true, features = ["serde"] }
indexmap = { version = "2.8.0" }
async-trait = { workspace = true }
humantime = "2.2.0"
axum = { version = "0.8" }
tower-http = { version = "0.6.2", features = ["cors"] }
reqwest = { workspace = true }
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "sqlite" ] }
regex = { workspace = true }
serde_yaml = { workspace = true }
toml = "0.8"
tempfile = "3.14"
rust-embed = "8.7.2"
mime_guess = "2.0.5"
ormlite = { version = "0.24.1", features = ["sqlite", "chrono"] }

[features]
default = []
python-bridge = []

