[package]
name = "biliup-cli"
version.workspace = true
edition = "2024"
description = "Upload video to bilibili."
license = "MIT OR Apache-2.0"

[[bin]]
name = "biliup"
path = "src/main.rs"

[dependencies]
biliup = { path = "../biliup", features = ["cli"] }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }  # 添加特性（特性是累加的）  }
thiserror = { workspace = true }
rand = { workspace = true }
serde_urlencoded = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
clap = { version = "4", features = ["derive"] }
time = { workspace = true }

glob = "0.3.2"
qrcode = "0.14"
indicatif =  "0.18.0"
image = "0.25"
dialoguer = "0.12.0"
chrono = { workspace = true, features = ["serde"] }
indexmap = { version = "2.8.0" }
async-trait = { workspace = true }
humantime = "2.2.0"
axum = { version = "0.8", features = ["macros", "ws"] }
tower-http = { version = "0.6.2", features = ["fs", "cors"] }
reqwest = { workspace = true }
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "sqlite" ] }
regex = { workspace = true }
serde_yaml = { workspace = true }
tempfile = "3.14"
rust-embed = "8.7.2"
mime_guess = "2.0.5"
ormlite = { version = "0.24.1", features = ["sqlite", "chrono"] }
url = { workspace = true }
error-stack = { workspace = true }
bon = { workspace = true }
axum-login = "0.18.0"
password-auth = "1.0.0"
tower = "0.5.2"
tower-sessions = { version = "0.14.0", default-features = false, features = [
    "signed",
] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
async-channel = { version = "2.5.0" }
nom = "8"
tokio-util = "0.7.16"
libc = "0.2.174"
struct-patch = "0.10.4"
shellexpand = "3.1"
dirs = "6.0"

[features]
default = []
python-bridge = []

