[package]
name = "biliup"
version = "0.2.4"
edition = "2024"
description = "Upload video to bilibili."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
serde_urlencoded = "0.7"
reqwest_cookie_store = "0.8.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
rsa = "0.9.8"
base64 = "0.22"
md-5 = "0.10.6"
# FIXME: 等 rsa 0.10.0 发布后再更新
rand = "0.8.5"
url = "2.5.4"
thiserror = "2"

cookie = "0.18.1"

bytes = "1.10.1"
futures = "0.3.31"
typed-builder = "0.20.0"
reqwest-middleware = { version = "0.4", features = ["json"] }
reqwest-retry = "0.7.0"
clap = { version = "4", features = ["derive"], optional = true }
time = "0.3"
anyhow = "1.0"
m3u8-rs = "6"
nom = "8"
chrono = "0.4"
byteorder = "1.5.0"
regex = "1.11.1"
async-trait = "0.1.87"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "macos-system-configuration", "brotli", "gzip", "json", "rustls-tls", "stream"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }

[features]
cli = ["clap"]
