[package]
name = "biliup"
version.workspace = true
edition = "2024"
description = "Upload video to bilibili."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_urlencoded = { workspace = true }
reqwest_cookie_store = "0.10.0"
tokio = { workspace = true }
tracing = { workspace = true }
rsa = "0.9.8"
base64 = "0.22"
md-5 = "0.10.6"
# FIXME: 等 rsa 0.10.0 发布后再更新
rand = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }

cookie = "0.18.1"

bytes = { workspace = true }
futures = { workspace = true }
bon = { workspace = true }
reqwest-middleware = { version = "0.5", features = ["json"] }
reqwest-retry = "0.9"
clap = { version = "4", features = ["derive"], optional = true }
time = "0.3"
m3u8-rs = "6"
nom = "8"
chrono = { workspace = true }
byteorder = "1.5.0"
regex = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true, features = ["charset", "http2", "brotli", "gzip", "json", "stream"] }
urlencoding = "2.1"
libsm = "0.6.0"

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }  # 添加特性（特性是累加的）  }

[features]
cli = ["clap"]
