[package]
name = "danmaku"
version.workspace = true
edition = "2024"
description = "Live stream danmaku (chat) recording client"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["sync", "time", "fs", "io-util"] }
futures = { workspace = true }
async-trait = { workspace = true }

# HTTP client (for getting WebSocket info)
reqwest = { workspace = true, features = ["json"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22"

# XML output
quick-xml = { version = "0.37", features = ["serialize"] }

# Binary parsing
nom = "8"
byteorder = "1.5"

# Compression
brotli = "7"
flate2 = "1.0"

# Error handling
thiserror = { workspace = true }

# Time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Regex (for Twitch IRC parsing)
regex = { workspace = true }

# URL parsing
url = { workspace = true }

# WBI signing (Bilibili)
md5 = "0.7"
rand = { workspace = true }
urlencoding = "2.1"

# WebSocket
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"] }
rustls-platform-verifier = "0.7"

[features]
default = ["twitch", "twitcasting", "bilibili", "douyu", "huya", "douyin", "youtube"]
twitch = []
twitcasting = []
bilibili = []
douyu = []
huya = []
douyin = []
youtube = []
all-platforms = ["twitch", "twitcasting", "bilibili", "douyu", "huya", "douyin", "youtube"]

[dev-dependencies]
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
