[package]
name = "stream-gears"
version = "1.0.7"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "stream_gears"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { version = "0.24.0", features = ["abi3-py38"] }
serde = "1"
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time"] }
tracing-appender = "0.2"
anyhow = "1.0"
futures = "0.3.31"
biliup = { path = "../biliup"}
time = "0.3"
typed-builder = "0.20.0"
clap = { version = "4", features = ["derive"] }

# [target.'cfg(all(target_arch="aarch64", target_os="linux"))'.dependencies]
# downloader = { path = "../downloader", default-features = false , features = ["rustls-tls"] }


# [target.'cfg(not(all(target_arch="aarch64", target_os="linux")))'.dependencies]
# downloader = { path = "../downloader" }
