[package]
name = "stream-gears"
version.workspace = true
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "stream_gears"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { version = "0.26", features = ["abi3-py38", "anyhow"] }
pythonize = { version = "0.26.0" }
bytes = { workspace = true }
ormlite = { version = "0.24.1", features = ["sqlite", "chrono"] }
rust-embed = "8.7.2"
mime_guess = "2.0.5"
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6.2", features = ["cors"] }
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "sqlite" ] }
nom = "8"
serde = "1"
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
async-channel = { version = "2.5.0" }
biliup = { path = "../biliup"}
url = { workspace = true }
time = { workspace = true }
chrono = { workspace = true }
fancy-regex = { version = "0.16.1"}
typed-builder = { workspace = true }
bon = { workspace = true }
clap = { version = "4", features = ["derive"] }
async-trait = { workspace = true }
error-stack = { workspace = true }
axum-login = "0.18.0"
password-auth = "1.0.0"
tower = "0.5.2"
tower-sessions = { version = "0.14.0", default-features = false, features = [
    "signed",
] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }

# [target.'cfg(all(target_arch="aarch64", target_os="linux"))'.dependencies]
# downloader = { path = "../downloader", default-features = false , features = ["rustls-tls"] }


# [target.'cfg(not(all(target_arch="aarch64", target_os="linux")))'.dependencies]
# downloader = { path = "../downloader" }
