[package]
name = "stream-gears"
version.workspace = true
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "stream_gears"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["abi3-py38", "anyhow"] }
pythonize = { version = "0.27.0" }
bytes = { workspace = true }
ormlite = { version = "0.24.1", features = ["sqlite", "chrono"] }
rust-embed = "8.7.2"
mime_guess = "2.0.5"
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6.2", features = ["cors"] }
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "sqlite" ] }
nom = "8"
serde = "1"
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }

thiserror = { workspace = true }
futures = { workspace = true }
async-channel = { version = "2.5.0" }
biliup = { path = "../biliup"}
biliup-cli = { path = "../biliup-cli"}
url = { workspace = true }
time = { workspace = true }
chrono = { workspace = true }
fancy-regex = { version = "0.17.0"}
bon = { workspace = true }
clap = { version = "4", features = ["derive"] }
async-trait = { workspace = true }
error-stack = { workspace = true }
